tests/diagnostics/statements/bindings/unused_variable/expect.txt
# exit: 1
input/main.coppice:2:5: error: unused variable 'x'
      x := 1
      ^
